# scGPT

./: pyproject.toml
model/: flash_mha.py  generation_model.py  model.py  multiomic_model.py
scgpt/model/: flash_mha.py  generation_model.py  model.py  multiomic_model.py
scgpt/utils/: util.py
tests/: test_tokenizer.py
tokenizer/: gene_tokenizer.py
