[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scGPT"
version = "0.2.1"
description = "Large-scale generative pretrain of single cell using transformer."
license = {text = "MIT"}
authors = [
    {name = "Haotian", email = "subercui@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=1.3.5",
    "scanpy>=1.9.1",
    "torch>=1.13.0",
    "torchtext",
    "numba>=0.55.1",
    "scikit-misc>=0.1.4",
    "umap-learn>=0.5.3",
    "leidenalg>=0.8.10",
    "datasets>=2.3.0",
    "typing-extensions>=4.2.0",
    "scib>=1.0.3",
    "cell-gears<0.0.3",
    "orbax<0.1.8",
    "flash-attn==1.0.9"
]

[project.urls]
repository = "https://github.com/bowang-lab/scGPT"
homepage = "https://github.com/bowang-lab/scGPT"


[tool.setuptools.packages.find]
where = ["."]
